--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nativescript-socketio": "^3.3.1",
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-ui-sidedrawer": "^8.0.1",
+    "nativescript-unit-test-runner": "^0.7.0",
     "nativescript-vue": "^2.6.1",
     "nativescript-vue-devtools": "^1.4.0",
     "tns-core-modules": "^6.5.1",
@@ -30,16 +31,22 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@types/node": "^13.11.1",
+    "@types/qunit": "^2.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "karma": "4.0.0",
+    "karma-nativescript-launcher": "0.4.0",
+    "karma-qunit": "4.0.0",
+    "karma-webpack": "3.0.5",
     "nativescript-dev-webpack": "^1.5.1",
     "nativescript-vue-template-compiler": "^2.6.0",
     "nativescript-worker-loader": "~0.11.0",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.5",
+    "qunit": "^2.9.3",
     "tns-platform-declarations": "^6.5.1",
     "typescript": "^3.8.3",
     "vue": "^2.6.11",
