--- a/app/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/app/App_Resources/Android/src/main/AndroidManifest.xml
@@ -35,5 +35,6 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="com.tns.ErrorReportActivity"/>
+		<service android:name="com.mapbox.services.android.telemetry.service.TelemetryService" />
 	</application>
 </manifest>
