--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nativescript/theme": "^2.2.1",
     "@vue/devtools": "^5.3.3",
     "nativescript-fonticon": "^2.0.0",
+    "nativescript-mapbox": "^4.4.1",
     "nativescript-socketio": "^3.3.1",
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-ui-sidedrawer": "^8.0.1",
