--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
       "version": "6.5.0"
     }
   },
+  "scripts": {},
   "dependencies": {
     "@nativescript/theme": "^2.2.1",
     "@vue/devtools": "^5.3.3",
     "nativescript-fonticon": "^2.0.0",
+    "nativescript-geolocation": "^5.1.0",
     "nativescript-mapbox": "^4.4.1",
     "nativescript-socketio": "^3.3.1",
     "nativescript-toasty": "^3.0.0-alpha.2",
