--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "nativescript": {
     "id": "com.controldistance.app",
     "templateVersion": "v2",
-    "tns-android": {
+    "tns-ios": {
       "version": "6.5.0"
     },
-    "tns-ios": {
+    "tns-android": {
       "version": "6.5.0"
     }
   },
@@ -27,8 +27,7 @@
     "nativescript-unit-test-runner": "^0.7.0",
     "nativescript-vue": "^2.6.1",
     "nativescript-vue-devtools": "^1.4.0",
-    "tns-core-modules": "^6.5.1",
-    "vuex": "^3.3.0"
+    "tns-core-modules": "^6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -40,10 +39,10 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "karma": "4.0.0",
+    "karma": "^5.0.4",
     "karma-nativescript-launcher": "0.4.0",
-    "karma-qunit": "4.0.0",
-    "karma-webpack": "3.0.5",
+    "karma-qunit": "^4.0.0",
+    "karma-webpack": "^4.0.2",
     "nativescript-dev-webpack": "^1.5.1",
     "nativescript-vue-template-compiler": "^2.6.0",
     "nativescript-worker-loader": "~0.11.0",
@@ -54,7 +53,6 @@
     "typescript": "^3.8.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.4",
-    "vue-loader": "^15.9.1",
-    "vuex-class": "^0.3.2"
+    "vue-loader": "^15.9.1"
   }
 }
