--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
       "version": "6.5.0"
     }
   },
-  "scripts": {},
+  "scripts": {
+    "dev": "tns debug android",
+    "devan": "tns debug android --no-hmr",
+    "devin": "tns debug ios --no-hmr",
+    "un": "adb uninstall com.domain.yourapp"
+  },
   "dependencies": {
     "@nativescript/theme": "^2.2.1",
     "@vue/devtools": "^5.3.3",
