Change application name

--- a/app/App_Resources/Android/settings.json
+++ b/app/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"com.controldistance.app","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"com.distancecontrol.app","minSdkVersion":null,"targetSdkVersion":null}
