--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,6 @@
     "markingMode": "none"
   },
   "main": "main",
-  "name": "covid19-distance-control",
+  "name": "distance-control",
   "version": "0.0.1"
 }
