--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nativescript-geolocation": "^5.1.0",
     "nativescript-mapbox": "^5.0.1",
     "nativescript-material-bottomsheet": "^3.2.8",
+    "nativescript-material-button": "^3.2.8",
     "nativescript-material-slider": "^3.2.8",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-secure-storage": "^2.6.0",
