--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nativescript/theme": "^2.2.1",
     "@nstudio/nativescript-floatingactionbutton": "^2.0.1",
     "@vue/devtools": "^5.3.3",
+    "d3-ease": "^1.0.6",
+    "nativescript-bitmap-factory": "^1.8.1",
     "nativescript-drop-down": "^5.0.5",
     "nativescript-fonticon": "^2.0.0",
     "nativescript-geolocation": "^5.1.0",
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.0.0",
+    "@types/d3-ease": "^1.0.9",
     "@types/node": "^13.11.1",
     "@types/qunit": "^2.9.1",
     "babel-eslint": "^10.1.0",
