--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/d3-ease": "^1.0.9",
     "@types/node": "^13.11.1",
     "@types/qunit": "^2.9.1",
+    "@vue/composition-api": "^0.6.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
