--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
       language: node_js
       os: linux
       node_js: "13"
-      script: cd src && npm run ci.tslint
+      script: cd src && npm run ci.eslint
     - stage: "WebPack, Build and Test"
       os: osx
       env:
