--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "devan": "tns debug android --no-hmr",
     "devin": "tns debug ios --no-hmr",
     "un": "adb uninstall com.domain.yourapp",
-    "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
+    "ci.tslint": "npm i && tslint '**/*.ts' --config './tslint.json' --exclude '**/node_modules/**'"
   },
   "dependencies": {
     "@nativescript/theme": "^2.2.1",
@@ -70,6 +70,7 @@
     "prettier": "^2.0.5",
     "qunit": "^2.9.3",
     "tns-platform-declarations": "^6.5.1",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.4",
