--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "dev": "tns debug android",
     "devan": "tns debug android --no-hmr",
     "devin": "tns debug ios --no-hmr",
-    "un": "adb uninstall com.domain.yourapp",
-    "ci.tslint": "npm i && tslint '**/*.ts' --config './tslint.json' --exclude '**/node_modules/**'"
+    "tslint": "npm i && tslint 'app/**/*.ts'",
+    "un": "adb uninstall com.distancecontrol.app",
+    "ci.android.build": "tns build android"
   },
   "dependencies": {
     "@nativescript/theme": "^2.2.1",
