--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,25 @@
 matrix:
-  include: 
+  include:
   - stage: "Lint"
       language: node_js
       os: linux
       node_js: "13"
       script: npm run ci.tslint
 
-  # - stage: "Build"
-  #   env: 
-  #     - BuildAndroid="26"
-  #   language: android
-  #   os: linux
-  #   jdk: openjdk8
-  #   before_install: nvm install 6.10.3
-  #   script: npm run ci.android.build
+  - stage: "Build"
+    env:
+      - BuildAndroid="26"
+    language: android
+    os: linux
+    jdk: openjdk8
+    before_install: nvm install 6.10.3
+    script: npm run ci.android.build
   # - os: osx
-    # env: 
+    # env:
     #   - BuildiOS="11"
     #   - Xcode="9.1"
     # osx_image: xcode9.1
-    # language: node_js 
+    # language: node_js
     # node_js: "10"
     # jdk: openjdk8
     # script: npm run ci.ios.build
