--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ matrix:
       node_js: "13"
       script: npm run ci.tslint
 
-  - stage: "Build"
-    env:
-      - BuildAndroid="26"
-    language: android
-    os: linux
-    jdk: openjdk8
-    before_install: nvm install 6.10.3
-    script: npm run ci.android.build
+  # - stage: "Build"
+  #   env:
+  #     - BuildAndroid="26"
+  #   language: android
+  #   os: linux
+  #   jdk: openjdk8
+  #   before_install: nvm install 6.10.3
+  #   script: npm run ci.android.build
   # - os: osx
     # env:
     #   - BuildiOS="11"
