--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "dev": "tns debug android",
-    "devan": "tns debug android --no-hmr",
+    "devan": "tns debug android --no-hmr --env.snapshot --env.uglify",
     "devin": "tns debug ios --no-hmr",
     "un": "adb uninstall com.distancecontrol.app",
     "tslint": "tslint 'app/**/*.ts'",
@@ -56,6 +56,7 @@
     "nativescript-unit-test-runner": "^0.7.0",
     "nativescript-vue": "^2.6.1",
     "nativescript-vue-devtools": "^1.4.0",
+    "nativescript-vue-navigator": "^1.2.0",
     "tns-core-modules": "^6.5.1"
   },
   "devDependencies": {
