--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nativescript/theme": "^2.2.1",
     "@vue/devtools": "^5.3.3",
     "d3-ease": "^1.0.6",
+    "nanoid": "^3.1.10",
     "nativescript-bitmap-factory": "^1.8.1",
     "nativescript-geolocation": "^5.1.0",
     "nativescript-mapbox": "^5.0.1",
@@ -53,6 +54,7 @@
     "nativescript-secure-storage": "^2.6.0",
     "nativescript-socketio": "^3.3.1",
     "nativescript-toasty": "^3.0.0-alpha.2",
+    "nativescript-ui-autocomplete": "^6.0.1",
     "nativescript-ui-sidedrawer": "^8.0.1",
     "nativescript-unit-test-runner": "^0.7.0",
     "nativescript-vue": "^2.6.1",
