--- a/package.json
+++ b/package.json
@@ -38,57 +38,60 @@
     "test": "karma start --single-run"
   },
   "dependencies": {
-    "@nativescript/theme": "^2.2.1",
+    "@mapbox/mapbox-sdk": "^0.11.0",
+    "@nativescript/theme": "^2.3.3",
     "@vue/devtools": "^5.3.3",
     "d3-ease": "^1.0.6",
-    "nanoid": "^3.1.10",
+    "nanoid": "^3.1.12",
     "nativescript-bitmap-factory": "^1.8.1",
     "nativescript-geolocation": "^5.1.0",
     "nativescript-mapbox": "^5.0.1",
-    "nativescript-material-bottomsheet": "^3.2.8",
-    "nativescript-material-button": "^3.2.8",
-    "nativescript-material-floatingactionbutton": "^3.2.10",
-    "nativescript-material-slider": "^3.2.8",
-    "nativescript-material-textfield": "^3.2.8",
+    "nativescript-material-bottomsheet": "^3.2.19",
+    "nativescript-material-button": "^3.2.19",
+    "nativescript-material-floatingactionbutton": "^3.2.19",
+    "nativescript-material-slider": "^3.2.19",
+    "nativescript-material-textfield": "^3.2.19",
     "nativescript-plugin-firebase": "^10.5.2",
-    "nativescript-secure-storage": "^2.6.0",
+    "nativescript-secure-storage": "^2.6.1",
     "nativescript-socketio": "^3.3.1",
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-ui-autocomplete": "^6.0.1",
     "nativescript-ui-sidedrawer": "^8.0.1",
     "nativescript-unit-test-runner": "^0.7.0",
-    "nativescript-vue": "^2.6.1",
+    "nativescript-vue": "^2.7.1",
     "nativescript-vue-devtools": "^1.4.0",
     "nativescript-vue-navigator": "^1.2.0",
-    "tns-core-modules": "^6.5.1"
+    "tns-core-modules": "^6.5.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "@types/d3-ease": "^1.0.9",
-    "@types/node": "^13.11.1",
+    "@types/node": "^14.0.27",
     "@types/qunit": "^2.9.1",
-    "@vue/composition-api": "^0.6.6",
+    "@vue/composition-api": "^1.0.0-beta.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.5.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
-    "karma": "^5.0.4",
+    "got": "^11.5.1",
+    "karma": "^5.1.1",
     "karma-nativescript-launcher": "0.4.0",
-    "karma-qunit": "^4.0.0",
+    "karma-qunit": "^4.1.1",
     "karma-webpack": "^4.0.2",
+    "keyv": "^4.0.1",
     "nativescript-dev-webpack": "^1.5.1",
-    "nativescript-vue-template-compiler": "^2.6.0",
-    "nativescript-worker-loader": "~0.11.0",
+    "nativescript-vue-template-compiler": "^2.7.1",
+    "nativescript-worker-loader": "~0.12.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
-    "qunit": "^2.9.3",
-    "tns-platform-declarations": "^6.5.1",
+    "qunit": "^2.10.1",
+    "tns-platform-declarations": "^6.5.12",
     "tslint": "^6.1.2",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.7",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.17.4",
-    "vue-loader": "^15.9.1"
+    "vue-i18n": "^8.20.0",
+    "vue-loader": "^15.9.3"
   }
 }
